# sports-image-prediction

./: .gitignore  .pre-commit-config.yaml  README.md  predict_sport.ipynb  pyproject.toml  requirements.txt  run.py
.github/workflows/: check.yaml
output/: kmnist_mod.pth
src/: command.py  constants.py  data.py  evaluate.py  load_data.py  loop.py  model.py  plot.py  predict.py  run.py  train.py  utils.py
src/models/: lenet5.py  resnet18.py
tests/: test_dummy.py
